fixed the navbar alignment

--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,11 @@ ul li {
 .navbar,
 .navbar ul {
   display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 12px;
+  color: hsla(0, 0%, 100%, 0.8);
+  font-weight: 700;
 }
 .navbar {
   flex-grow: 5;
